# tcpdug

./: README.md  book.toml
booksrc/: README.md  SUMMARY.md  code.md  learn.md  volunteers.md
booksrc/devlog/: README.md  log202009.md  log202010.md  log202011.md  log202109-xcm.md
booksrc/events/: event2020.md
chains/sntpl-2.0.0-rc6-1/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/node/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/node/src/: chain_spec.rs
chains/sntpl-2.0.0-rc6-1/pallets/foodex/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/pallets/foodex/src/: lib.rs
chains/sntpl-2.0.0-rc6-1/pallets/sasset/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/pallets/xasset/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/runtime/: Cargo.toml
chains/sntpl-2.0.0-rc6-1/runtime/src/: lib.rs
chains/sntpl-2.0.0-rc6-1/scripts/: Dockerfile  docker_build.sh  node-tls.yaml
chains/sntpl2/: Cargo.toml  README.md
chains/sntpl2/node/: Cargo.toml
chains/sntpl2/node/src/: chain_spec.rs  rpc.rs
chains/sntpl2/pallets/foodex/: Cargo.toml
chains/sntpl2/pallets/sasset/: Cargo.toml
chains/sntpl2/primitives/: Cargo.toml
chains/sntpl2/primitives/base/: Cargo.toml
chains/sntpl2/primitives/base/src/: lib.rs
chains/sntpl2/primitives/src/: lib.rs
chains/sntpl2/runtime/: Cargo.toml
chains/sntpl2/runtime/src/: lib.rs
docs/: 404.html  index.html  learn.html  print.html  searchindex.js  searchindex.json  volunteers.html
docs/devlog/: index.html  log202009.html  log202010.html  log202011.html
docs/events/: event2020.html  index.html
projects/keytools/: burnaddr.js  package-lock.json  package.json
(+5 files in other folders)
